# CXdecStaticExtractor

./: .gitignore  README.md  build.cmd
cxdec-rs-analyzer/: Cargo.toml  print_res.rs
cxdec-rs-analyzer/src/: main.rs
scheme/YuzuSoft/CafeStella/: CafeStella.lst
scheme/YuzuSoft/CafeStella/CafeStella[HF]/: CafeStella[HF]_drip_program.json  CafeStella[HF]_scheme.json
scheme/YuzuSoft/CafeStella/CafeStella[Steam]/: CafeStella[Steam]_drip_program.json  CafeStella[Steam]_scheme.json
scheme/YuzuSoft/TenshiSouzouREBOOT/TenshiSouzouREBOOT[HF]/: TenshiSouzouREBOOT[HF]_drip_program.json  TenshiSouzouREBOOT[HF]_scheme.json
src-tauri/: Cargo.toml  parse_xp3.py  tauri.conf.json  test_parse.rs
src-tauri/src/: crypto.rs  crypto_monocypher.rs  extractor.rs  lib.rs  main.rs  tauri_logger.rs  vm.rs  xp3.rs
src-tauri/src/cxdec_tools/: drip_archive.rs  format.rs  game.rs  lst_scanner.rs  mod.rs  pipeline.rs
src-tauri/src/cxdec_tools/crypto/: bootstrap.rs  cx_hash.rs  exe_resource.rs  hxv4_compute.rs  hxv4_shellcode.rs  mod.rs  steamstub.rs
src-tauri/src/cxdec_tools/process/: common.rs  dump.rs  mod.rs  pbd.rs  scn.rs  script.rs  tjs.rs  tlg.rs
src-tauri/src/cxdec_tools/struct/: mod.rs  pbd.rs  psb.rs  tjs.rs  tlg.rs  xp3.rs
ui/: app.js  index.html  style.css
