[package]
name = "hxv4-xp3-extractor-rust"
version = "0.1.0"
description = "HXV4 XP3 Extractor rewritten in Rust"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# crypto & parsing
chacha20 = "0.9"
chacha20poly1305 = "0.10"
byteorder = "1.4"
binrw = "0.15.1"
walkdir = "2.3"
flate2 = "1.0"
rayon = "1.8"
chrono = "0.4.45"
once_cell = "1.21.4"
sha2 = "0.11.0"
pathdiff = "0.2.3"
poly1305 = "0.9.1"
indicatif = "0.18.6"
pelite = "0.10.0"
sha3 = "0.12.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
num_cpus = "1.17.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.16"
glob = "0.3.3"
memchr = "2.8.3"
aes = "0.8"
cbc = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
